--- a/Feeds/Feeds/Views/OrgRegistrationView.xaml
+++ b/Feeds/Feeds/Views/OrgRegistrationView.xaml
@@ -10,26 +10,26 @@
                    FontSize="Micro"
                    HorizontalOptions="Center"
                    WidthRequest="200"
-                   Text="{Binding Username}"
+                   Text="{Binding UserAccounts.Username}"
                    Placeholder="Username" />
             <Entry x:Name="orgNameEntry"
                    FontSize="Micro"
                    HorizontalOptions="Center"
                    WidthRequest="200"
-                   Text="{Binding OrgName}"
+                   Text="{Binding UserAccounts.Name}"
                    Placeholder="Org Name" />
             <Entry x:Name="addressEntry"
                    FontSize="Micro"
                    HorizontalOptions="Center"
                    WidthRequest="200"
-                   Text="{Binding Address}"
+                   Text="{Binding UserAccounts.Address}"
                    Placeholder="Org Address" />
             <Entry x:Name="emailEntry"
                    FontSize="Micro"
                    HorizontalOptions="Center"
                    WidthRequest="200"
                    Keyboard="Email"
-                   Text="{Binding Email}"
+                   Text="{Binding UserAccounts.Email}"
                    Placeholder="Email" />
             <Entry x:Name="email2Entry"
                    FontSize="Micro"
@@ -43,14 +43,14 @@
                    HorizontalOptions="Center"
                    WidthRequest="200"
                    Keyboard="Telephone"
-                   Text="{Binding PhoneNo}"
+                   Text="{Binding UserAccounts.PhoneNo}"
                    Placeholder="Phone" />
             <Entry x:Name="passwordEntry"
                    FontSize="Micro"
                    HorizontalOptions="Center"
                    WidthRequest="200"
                    IsPassword="True"
-                   Text="{Binding Password}"
+                   Text="{Binding UserAccounts.Password}"
                    Placeholder="Password" />
             <Entry x:Name="password2Entry"
                    FontSize="Micro"
