--- a/Feeds/Feeds/Views/OrgRegistrationView.xaml
+++ b/Feeds/Feeds/Views/OrgRegistrationView.xaml
@@ -2,64 +2,75 @@
 <ContentPage Title="Organisation"
              xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Feeds.Views.OrgRegistrationView">
+             x:Class="Feeds.Views.OrgRegistrationView"
+             xmlns:converters="clr-namespace:Feeds.Converters;assembly=Feeds">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <converters:FirstValidationErrorConverter x:Key="FirstValidationErrorConverter" />
+            <Style x:Key="ValidationErrorLabelStyle" TargetType="Label">
+                <Setter Property="TextColor" Value="Red" />
+                <Setter Property="FontSize" Value="Micro" />
+                <Setter Property="WidthRequest" Value="200" />
+                <Setter Property="HorizontalOptions" Value="Center" />
+            </Style>
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Resources will soon be at your fingertips." FontSize="Micro" />
-            <Entry x:Name="usernameEntry"
+        <ScrollView>
+            <StackLayout Padding="0,0,0,10">
+                <Label Text="Resources will soon be at your fingertips." FontSize="Micro" />
+                <Entry x:Name="usernameEntry"
                    FontSize="Micro"
                    HorizontalOptions="Center"
                    WidthRequest="200"
-                   Text="{Binding UserAccounts.Username}"
+                   Text="{Binding Username.Value}"
                    Placeholder="Username" />
-            <Entry x:Name="orgNameEntry"
+                <Label Text="{Binding Username.Errors, Converter={StaticResource FirstValidationErrorConverter}}"
+                       Style="{StaticResource ValidationErrorLabelStyle}" />
+                <Entry x:Name="orgNameEntry"
                    FontSize="Micro"
                    HorizontalOptions="Center"
                    WidthRequest="200"
-                   Text="{Binding UserAccounts.Name}"
+                   Text="{Binding Name.Value}"
                    Placeholder="Org Name" />
-            <Entry x:Name="addressEntry"
+                <Label Text="{Binding Name.Errors, Converter={StaticResource FirstValidationErrorConverter}}"
+                       Style="{StaticResource ValidationErrorLabelStyle}" />
+                <Entry x:Name="addressEntry"
                    FontSize="Micro"
                    HorizontalOptions="Center"
                    WidthRequest="200"
-                   Text="{Binding UserAccounts.Address}"
+                   Text="{Binding Address.Value}"
                    Placeholder="Org Address" />
-            <Entry x:Name="emailEntry"
+                <Label Text="{Binding Address.Errors, Converter={StaticResource FirstValidationErrorConverter}}"
+                       Style="{StaticResource ValidationErrorLabelStyle}" />
+                <Entry x:Name="emailEntry"
                    FontSize="Micro"
                    HorizontalOptions="Center"
                    WidthRequest="200"
                    Keyboard="Email"
-                   Text="{Binding UserAccounts.Email}"
+                   Text="{Binding Email.Value}"
                    Placeholder="Email" />
-            <Entry x:Name="email2Entry"
-                   FontSize="Micro"
-                   HorizontalOptions="Center"
-                   WidthRequest="200"
-                   Keyboard="Email"
-                   Text="{Binding Email2}"
-                   Placeholder="Confirm Email" />
-            <Entry x:Name="phoneEntry"
+                <Label Text="{Binding Email.Errors, Converter={StaticResource FirstValidationErrorConverter}}"
+                       Style="{StaticResource ValidationErrorLabelStyle}" />
+                <Entry x:Name="phoneEntry"
                    FontSize="Micro"
                    HorizontalOptions="Center"
                    WidthRequest="200"
                    Keyboard="Telephone"
-                   Text="{Binding UserAccounts.PhoneNo}"
+                   Text="{Binding PhoneNo.Value}"
                    Placeholder="Phone" />
-            <Entry x:Name="passwordEntry"
+                <Label Text="{Binding PhoneNo.Errors, Converter={StaticResource FirstValidationErrorConverter}}"
+                       Style="{StaticResource ValidationErrorLabelStyle}" />
+                <Entry x:Name="passwordEntry"
                    FontSize="Micro"
                    HorizontalOptions="Center"
                    WidthRequest="200"
                    IsPassword="True"
-                   Text="{Binding UserAccounts.Password}"
+                   Text="{Binding Password.Value}"
                    Placeholder="Password" />
-            <Entry x:Name="password2Entry"
-                   FontSize="Micro"
-                   HorizontalOptions="Center"
-                   WidthRequest="200"
-                   IsPassword="True"
-                   Text="{Binding Password2}"
-                   Placeholder="Confirm Password" />
-            <Button BorderRadius="10"
+                <Label Text="{Binding Password.Errors, Converter={StaticResource FirstValidationErrorConverter}}"
+                       Style="{StaticResource ValidationErrorLabelStyle}" />
+                <Button BorderRadius="10"
                     BorderWidth="1"
                     BorderColor="Black"
                     WidthRequest="100"
@@ -68,6 +79,7 @@
                     FontSize="Micro"
                     Text="Submit"
                     Command="{Binding SubmitCommand}" />
-        </StackLayout>
+            </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
