--- a/Feeds/Feeds/Views/LoginView.xaml
+++ b/Feeds/Feeds/Views/LoginView.xaml
@@ -53,28 +53,15 @@
                         FontSize="Micro"
                         Text="Login"
                         Command="{Binding LoginCommand}" />
-                </StackLayout>
-
-                <Label HorizontalOptions="Center" FontSize="Small" Text="Register" />
-
-                <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand">
-
-                    <StackLayout HorizontalOptions="CenterAndExpand">
-                        <Image HorizontalOptions="Center" Source="https://via.placeholder.com/200x200">
-                            <Image.GestureRecognizers>
-                                <TapGestureRecognizer Command="{Binding BusinessTapCommand}" />
-                            </Image.GestureRecognizers>
-                        </Image>
-                    </StackLayout>
-
-                    <StackLayout HorizontalOptions="CenterAndExpand">
-                        <Image HorizontalOptions="Center" Source="https://via.placeholder.com/200x200">
-                            <Image.GestureRecognizers>
-                                <TapGestureRecognizer Command="{Binding OrgTapCommand}" />
-                            </Image.GestureRecognizers>
-                        </Image>
-                    </StackLayout>
-
+                    <Button BorderRadius="10"
+                            BorderWidth="1"
+                            BorderColor="Black"
+                            WidthRequest="100"
+                            HeightRequest="35"
+                            HorizontalOptions="Center"
+                            FontSize="Micro"
+                            Text="Register"
+                            Command="{Binding RegisterCommand}" />
                 </StackLayout>
             </StackLayout>
         </ScrollView>
