Added donation view for donation list items. Applied filtering to donation list based on user's city. Improved navigation after form submissions.

--- a/Feeds/Feeds/Views/DonationListView.xaml
+++ b/Feeds/Feeds/Views/DonationListView.xaml
@@ -3,8 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Feeds.Views.DonationListView">
     <ListView x:Name="ViewList"
-            ItemsSource="{Binding DonationList}"
-            CachingStrategy="RecycleElement">
+              ItemsSource="{Binding DonationList}"
+              ItemTapped="ViewList_ItemTapped"
+              CachingStrategy="RecycleElement">
         <ListView.ItemTemplate>
             <DataTemplate>
                 <ViewCell>
