--- a/Feeds/Feeds/Views/LoginView.xaml
+++ b/Feeds/Feeds/Views/LoginView.xaml
@@ -45,22 +45,26 @@
                        Style="{StaticResource ValidationErrorLabelStyle}" />
 
                     <Button BorderRadius="10"
-                        BorderWidth="1"
-                        BorderColor="Black"
-                        WidthRequest="100"
-                        HeightRequest="35"
-                        HorizontalOptions="Center"
-                        FontSize="Micro"
-                        Text="Login"
-                        Command="{Binding LoginCommand}" />
+                            BorderWidth="1"
+                            BorderColor="#6EB275"
+                            WidthRequest="100"
+                            HeightRequest="35"
+                            HorizontalOptions="Center"
+                            FontSize="Micro"
+                            Text="Login"
+                            BackgroundColor="#6EB275"
+                            TextColor="White"
+                            Command="{Binding LoginCommand}" />
                     <Button BorderRadius="10"
                             BorderWidth="1"
-                            BorderColor="Black"
+                            BorderColor="#835AA6"
                             WidthRequest="100"
                             HeightRequest="35"
                             HorizontalOptions="Center"
                             FontSize="Micro"
                             Text="Register"
+                            BackgroundColor="#835AA6"
+                            TextColor="White"
                             Command="{Binding RegisterCommand}" />
                 </StackLayout>
             </StackLayout>
