--- a/Feeds/Feeds/Views/MainTabbedPage.xaml
+++ b/Feeds/Feeds/Views/MainTabbedPage.xaml
@@ -2,6 +2,7 @@
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             x:Class="Feeds.Views.MainTabbedPage"
-            NavigationPage.HasNavigationBar="False">
+            NavigationPage.HasNavigationBar="False"
+            BarBackgroundColor="#6EB275">
   <!--Pages can be added as references or inline-->
 </TabbedPage>
