--- a/Feeds/Feeds/Views/DonationFormView.xaml
+++ b/Feeds/Feeds/Views/DonationFormView.xaml
@@ -5,7 +5,7 @@
     <ContentPage.Content>
         <ScrollView>
             <StackLayout Padding="0,0,0,10">
-                <StackLayout Orientation="Horizontal">
+                <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
                     <Label Text="Pickup Date"
                            FontSize="Micro"
                            VerticalOptions="Center" />
@@ -14,7 +14,7 @@
                                 VerticalOptions="Center"
                                 Date="{Binding NewDonation.PickupDate}"/>
                 </StackLayout>
-                <StackLayout Orientation="Horizontal">
+                <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
                     <Label Text="From"
                            FontSize="Micro"
                            VerticalOptions="Center" />
@@ -36,22 +36,24 @@
                 <StackLayout x:Name="foodLayout" />
                 <Button BorderRadius="10"
                         BorderWidth="1"
-                        BorderColor="Black"
+                        BorderColor="#835AA6"
                         WidthRequest="100"
                         HeightRequest="35"
                         HorizontalOptions="Center"
                         FontSize="Micro"
                         Text="Add Food Item"
+                        TextColor="White"
                         BackgroundColor="#835AA6"
                         Command="{Binding AddFoodItemCommand}" />
                 <Button BorderRadius="10"
                         BorderWidth="1"
-                        BorderColor="Black"
+                        BorderColor="#6EB275"
                         WidthRequest="100"
                         HeightRequest="35"
                         HorizontalOptions="Center"
                         FontSize="Micro"
                         Text="Submit"
+                        TextColor="White"
                         BackgroundColor="#6EB275"
                         Command="{Binding SubmitCommand}" />
             </StackLayout>
